{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 636,
  "lineage": "a922ccea-f5cf-39bd-de92-37b85d4fb66f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "obligatorio_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:750038500402:instance/i-0c0d218e4425cb15d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0d218e4425cb15d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089a50cbd94955bfc",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.121",
            "public_ip": "3.93.217.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025ab05589ba02883",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075c1c8e99c951740",
            "tags": {
              "Name": "instance-frontend",
              "obligatorio": "True"
            },
            "tags_all": {
              "Name": "instance-frontend",
              "obligatorio": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03824783362a52995",
              "sg-069b29a0702ecacb5"
            ]
          },
          "dependencies": [
            "aws_eks_cluster.obligatorio_cluster",
            "aws_eks_node_group.obligatorio_node_group",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.obligatorio_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "obligatorio_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:internet-gateway/igw-071f1a1581e6236f5",
            "id": "igw-071f1a1581e6236f5",
            "owner_id": "750038500402",
            "tags": {
              "Name": "obligatorioc1-internet-gateway",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorioc1-internet-gateway",
              "terraform": "True"
            },
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750038500402:loadbalancer/app/obligatorio-lb/b763c106528f6e29",
            "arn_suffix": "app/obligatorio-lb/b763c106528f6e29",
            "desync_mitigation_mode": "defensive",
            "dns_name": "obligatorio-lb-1309462981.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:750038500402:loadbalancer/app/obligatorio-lb/b763c106528f6e29",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "obligatorio-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03824783362a52995",
              "sg-069b29a0702ecacb5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-074e2f6989fba2fae"
              },
              {
                "subnet_id": "subnet-075c1c8e99c951740"
              }
            ],
            "subnets": [
              "subnet-074e2f6989fba2fae",
              "subnet-075c1c8e99c951740"
            ],
            "tags": {
              "Name": "obligatorio-lb",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-lb",
              "terraform": "True"
            },
            "vpc_id": "vpc-0ef19009a61bac6fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.obligatorio_public_subnet",
            "aws_subnet.obligatorio_public_subnet2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/db02eec1c4247a57",
            "arn_suffix": "targetgroup/obligatorio-target-group/db02eec1c4247a57",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/db02eec1c4247a57",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "obligatorio-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "obligatorio_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/db02eec1c4247a57-20230624174835705900000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:750038500402:targetgroup/obligatorio-target-group/db02eec1c4247a57",
            "target_id": "i-0c0d218e4425cb15d"
          },
          "dependencies": [
            "aws_eks_cluster.obligatorio_cluster",
            "aws_eks_node_group.obligatorio_node_group",
            "aws_instance.obligatorio_frontend",
            "aws_lb_target_group.obligatorio",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.obligatorio_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "obligatorio_public_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071f1a1581e6236f5",
            "id": "r-rtb-008424ee07ee072da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008424ee07ee072da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.obligatorio_igw",
            "aws_route_table.obligatorio_route_table",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "obligatorio_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:route-table/rtb-008424ee07ee072da",
            "id": "rtb-008424ee07ee072da",
            "owner_id": "750038500402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071f1a1581e6236f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "obligatorio-route-table",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-route-table",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "obligatorio_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09858f11ca37761db",
            "route_table_id": "rtb-008424ee07ee072da",
            "subnet_id": "subnet-075c1c8e99c951740"
          },
          "dependencies": [
            "aws_route_table.obligatorio_route_table",
            "aws_subnet.obligatorio_public_subnet",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-0d30c24099a2b0702",
            "description": "Security group for RDSzsdatabase",
            "egress": [],
            "id": "sg-0d30c24099a2b0702",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069b29a0702ecacb5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "grupo-seguridad-db",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-db",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-db",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.http_sg",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-051d832dccbd2e597",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-051d832dccbd2e597",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-069b29a0702ecacb5",
            "description": "Security group for HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069b29a0702ecacb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grupo-seguridad-http",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-http",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-http",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-05f81504527ab7cf3",
            "description": "Security group for Redis",
            "egress": [],
            "id": "sg-05f81504527ab7cf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "obligatorio-redis-sg",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "s3_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-06127da46a19a625a",
            "description": "Security group for S3 bucket access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06127da46a19a625a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grupo-seguridad-s3-access",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-s3-access",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-s3-access",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae414e32f5b78cf9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:security-group/sg-03824783362a52995",
            "description": "Security group for SSH traffic",
            "egress": [],
            "id": "sg-03824783362a52995",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grupo-seguridad-ssh",
            "name_prefix": "",
            "owner_id": "750038500402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo-seguridad-ssh",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "grupo-seguridad-ssh",
              "terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-0c48b4826e70e8dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48b4826e70e8dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-private-subnet",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-private-subnet",
              "terraform": "True"
            },
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-0f681d3db9032b077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f681d3db9032b077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-private-subnet-2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-private-subnet-2",
              "terraform": "True"
            },
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-075c1c8e99c951740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c1c8e99c951740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-public-subnet",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-public-subnet",
              "terraform": "True"
            },
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obligatorio_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:subnet/subnet-074e2f6989fba2fae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074e2f6989fba2fae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750038500402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obligatorio-public-subnet2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-public-subnet2",
              "terraform": "True"
            },
            "vpc_id": "vpc-0ef19009a61bac6fe"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750038500402:vpc/vpc-0ef19009a61bac6fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068175dceb6e3beb4",
            "default_route_table_id": "rtb-0f084f016bdba566a",
            "default_security_group_id": "sg-0980a92890fdacc2f",
            "dhcp_options_id": "dopt-06c904222a1cab390",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef19009a61bac6fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f084f016bdba566a",
            "owner_id": "750038500402",
            "tags": {
              "Name": "obligatorio-vpc",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "obligatorio-vpc",
              "terraform": "True"
            }
          }
        }
      ]
    }
  ]
}